<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">🏊 SwimTimer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Vasca</string>
    <string name="reset">Reset</string>
    <string name="save">Salva</string>
    <string name="discard">Scarta</string>
    <string name="cancel">Annulla</string>
    <string name="delete">Elimina</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="rename">Rinomina</string>
    <string name="history">Cronologia Gare</string>
    <string name="save_session">Salva Gara</string>
    <string name="session_hint">Nome gara / atleta / evento</string>
    <string name="default_session_name">Gara</string>
    <string name="session_saved">✅ Gara salvata!</string>
    <string name="no_sessions">Nessuna gara salvata.\nAvvia il cronometro e salva una sessione!</string>
    <string name="no_laps">Nessun parziale registrato</string>
    <string name="laps_header">Vasche / Parziali</string>
    <string name="current_lap">Vasca corrente:</string>
    <string name="choose_theme">Tema</string>
    <string name="theme_light">☀️ Piscina Giorno</string>
    <string name="theme_dark">🌙 Piscina Notte</string>
    <string name="theme_multi">🔮 Notturna Viola</string>
    <string name="confirm_reset">Reset Cronometro</string>
    <string name="confirm_reset_msg">Vuoi fermare e resettare? Potrai salvare i dati della gara.</string>
    <string name="delete_q">Elimina gara</string>
    <string name="delete_confirm">Eliminare la gara \'%s\'?</string>
    <string name="lap_n">Vasca %d</string>
    <string name="lap_count">%d vasche</string>
    <string name="share">Condividi</string>
    <string name="share_via">Condividi tramite</string>
</resources>
